crates/ditto-checker/tests/golden/type-errors/match_unification_error_6.ditto
module Test exports (..)

type Maybe(a) = Just(a) | Nothing

nah = fn (dunno : a): Int -> 
  match dunno with
  | Just(n) -> unit
  | Nothing -> unit
  end
